infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector: # pods to manage
    matchLabels:
      app: client
  template: # pod config to create
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: rovilay/client:latest

---

apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  type: ClusterIP
  selector: 
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000 # port for service
      targetPort: 3000 # port for pod
