infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  selector: # pods to manage
    matchLabels:
      app: comments
  template: # pod config to create
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: rovilay/comments:latest

---

apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  type: ClusterIP
  selector: 
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 4001 # port for service
      targetPort: 4001 # port for pod
