infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  selector: # pods to manage
    matchLabels:
      app: query
  template: # pod config to create
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: rovilay/query:latest

---

apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  type: ClusterIP
  selector: 
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 4002 # port for service
      targetPort: 4002 # port for pod
